sample-namespace-and-struct-in-apps/app-name/app/ingress.partial.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  #annotations:
    #external-dns.alpha.kubernetes.io/target: "lh.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: "lh.${SECRET_DOMAIN}"
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
